--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write"
+    "format": "prettier --write",
+    "seed": "npx ts-node ./src/server/seed.ts"
   },
   "dependencies": {
     "@trpc/client": "^9.27.2",
     "@trpc/next": "^9.27.2",
     "@trpc/react": "^9.27.2",
     "@trpc/server": "^9.27.2",
+    "dotenv": "^16.0.2",
+    "firebase-admin": "^11.0.1",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
