--- a/package.json
+++ b/package.json
@@ -6,24 +6,38 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "jest --watch -i",
     "lint": "next lint",
     "format": "prettier --write",
-    "seed": "npx ts-node ./src/server/seed.ts"
+    "seed": "npx ts-node ./src/server/seed.ts",
+    "prisma": "npx prisma"
+  },
+  "prisma": {
+    "schema": "src/prisma/schema.prisma",
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@prisma/client": "4.3.1",
     "@trpc/client": "^9.27.2",
     "@trpc/next": "^9.27.2",
     "@trpc/react": "^9.27.2",
     "@trpc/server": "^9.27.2",
+    "@types/uuid": "^8.3.4",
     "dotenv": "^16.0.2",
     "firebase-admin": "^11.0.1",
     "next": "12.3.0",
+    "prisma": "^4.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
+    "uuid": "^9.0.0",
     "zod": "^3.19.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.5.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.0.3",
     "@types/node": "18.7.16",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
@@ -34,9 +48,13 @@
     "eslint-config-next": "12.3.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jest": "^27.0.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "jest": "^29.0.3",
+    "jest-environment-jsdom": "^29.0.3",
+    "jest-mock-extended": "2.0.4",
     "prettier": "2.7.1",
     "typescript": "4.8.3"
   }
