--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest --watch -i",
     "lint": "next lint",
     "format": "prettier --write",
-    "seed": "npx ts-node ./src/server/seed.ts",
+    "seed": "npx ts-node ./src/prisma/seed.ts",
     "prisma": "npx prisma"
   },
   "prisma": {
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@prisma/client": "4.3.1",
+    "@supabase/supabase-js": "^1.35.7",
     "@trpc/client": "^9.27.2",
     "@trpc/next": "^9.27.2",
     "@trpc/react": "^9.27.2",
@@ -56,6 +57,8 @@
     "jest-environment-jsdom": "^29.0.3",
     "jest-mock-extended": "2.0.4",
     "prettier": "2.7.1",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "4.8.3"
   }
 }
