--- a/package.json
+++ b/package.json
@@ -18,14 +18,12 @@
   },
   "dependencies": {
     "@prisma/client": "4.3.1",
-    "@supabase/supabase-js": "^1.35.7",
     "@trpc/client": "^9.27.2",
     "@trpc/next": "^9.27.2",
     "@trpc/react": "^9.27.2",
     "@trpc/server": "^9.27.2",
     "@types/uuid": "^8.3.4",
     "dotenv": "^16.0.2",
-    "firebase-admin": "^11.0.1",
     "next": "12.3.0",
     "prisma": "^4.3.1",
     "react": "18.2.0",
@@ -44,6 +42,7 @@
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
+    "autoprefixer": "^10.4.13",
     "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.3.0",
@@ -56,7 +55,10 @@
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
     "jest-mock-extended": "2.0.4",
+    "postcss": "^8.4.18",
     "prettier": "2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "tailwindcss": "^3.2.2",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "4.8.3"
