minor update on yarn test command. Removed old seed functions. Updated seedUsers.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest --watch -i",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "lint": "next lint",
     "format": "prettier --write",
     "seed": "npx ts-node ./src/prisma/seed.ts",
