--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   },
   "prisma": {
     "schema": "src/prisma/schema.prisma",
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node src/prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "4.3.1",
+    "@prisma/client": "^4.10.1",
     "@trpc/client": "^9.27.2",
     "@trpc/next": "^9.27.2",
     "@trpc/react": "^9.27.2",
@@ -26,7 +26,7 @@
     "@types/uuid": "^8.3.4",
     "dotenv": "^16.0.2",
     "next": "12.3.0",
-    "prisma": "^4.3.1",
+    "prisma": "^4.10.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
