reinstalled latest trpc

--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
   },
   "dependencies": {
     "@prisma/client": "^4.10.1",
-    "@trpc/client": "^9.27.2",
-    "@trpc/next": "^9.27.2",
-    "@trpc/react": "^9.27.2",
-    "@trpc/server": "^9.27.2",
+    "@tanstack/react-query": "^4.24.10",
+    "@trpc/client": "^10.12.0",
+    "@trpc/next": "^10.12.0",
+    "@trpc/react-query": "^10.12.0",
+    "@trpc/server": "^10.12.0",
     "@types/uuid": "^8.3.4",
     "dotenv": "^16.0.2",
     "next": "12.3.0",
     "prisma": "^4.10.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-query": "^3.39.2",
     "uuid": "^9.0.0",
     "zod": "^3.19.0"
   },
@@ -54,7 +54,6 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
-    "jest-mock-extended": "2.0.4",
     "postcss": "^8.4.18",
     "prettier": "2.7.1",
     "ts-jest": "^29.0.3",
