deleted most things inside pages/ because im bleeding edge. upgraded to next13 and start maining app/ directory because im bleeding edge. start using trpc inside app route because im bleeding fuckingedge

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,11 @@
   },
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -21,11 +25,29 @@
     "incremental": true,
     "baseUrl": "src",
     "paths": {
-      "base/*": ["base/*"],
-      "pages/*": ["pages/*"],
-      "server/*": ["server/*"]
-    }
+      "base/*": [
+        "base/*"
+      ],
+      "pages/*": [
+        "pages/*"
+      ],
+      "server/*": [
+        "server/*"
+      ]
+    },
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
