--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "@trpc/server": "^10.12.0",
     "@types/uuid": "^8.3.4",
     "dotenv": "^16.0.2",
-    "next": "12.3.0",
+    "next": "^13.2.1",
     "prisma": "^4.10.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "uuid": "^9.0.0",
     "zod": "^3.19.0",
     "zod-prisma-types": "^2.3.3"
@@ -46,7 +46,7 @@
     "autoprefixer": "^10.4.13",
     "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-next": "12.3.0",
+    "eslint-config-next": "^13.2.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jest": "^27.0.4",
