--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-dom": "^18.2.0",
     "uuid": "^9.0.0",
     "zod": "^3.19.0",
-    "zod-prisma-types": "^2.3.3"
+    "zod-prisma-types": "^2.3.3",
+    "zustand": "^4.3.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
