--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "seed": "ts-node src/prisma/seed.ts"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.5.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@prisma/client": "^4.10.1",
     "@tanstack/react-query": "^4.24.10",
     "@trpc/client": "^10.12.0",
@@ -25,6 +28,7 @@
     "@trpc/server": "^10.12.0",
     "@types/uuid": "^8.3.4",
     "dotenv": "^16.0.2",
+    "framer-motion": "^10.0.1",
     "next": "^13.2.1",
     "prisma": "^4.10.1",
     "react": "^18.2.0",
